# forkbench

./: CMLBCK.txt  CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: CMakeLists.txt  main.cpp
include/forkbench/: config.h  forkbench.h
include/forkbench/devices/: device.h
include/forkbench/devices/cpu/: cpu_device.h
include/forkbench/kernels/: kernel_base.h
include/forkbench/kernels/cpu/: fma_avx2_enhanced_kernel.h  fma_avx2_kernel.h  fma_avx512_kernel.h  fma_kernel.h
include/forkbench/timing/: stopwatch.h
src/core/: forkbench.cpp
src/devices/cpu/: cpu_device.cpp
tests/: CMakeLists.txt
